--- a/calendar.html
+++ b/calendar.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <title>Fleet Calendar (YFNED Fleet + NFC One-Sticker Method)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  
+
   <!-- FullCalendar CSS -->
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.css" rel="stylesheet">
-  
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -18,18 +18,107 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    body { margin: 0; padding: 0; font-family: sans-serif; }
-    header { background: #333; color: white; display: flex; justify-content: space-between; align-items: center; padding: 1rem; }
-    #user-info { margin-right: 1rem; }
-    #logout-btn { cursor: pointer; padding: 0.5rem 1rem; background: #666; color: white; border-radius: 4px; border: none; }
-    .container { max-width: 1200px; margin: auto; background: white; padding: 1rem; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .calendar-and-details { display: flex; gap: 1rem; }
-    .calendar-section { flex: 1; }
-    .details-section { flex: 0 0 300px; border-left: 1px solid #ccc; padding-left: 1rem; }
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+    }
+
+    header {
+      background: #333;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    #user-info {
+      margin-right: 1rem;
+    }
+
+    #logout-btn {
+      cursor: pointer;
+      padding: 0.5rem 1rem;
+      background: #666;
+      color: white;
+      border-radius: 4px;
+      border: none;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .calendar-and-details {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .calendar-section {
+      flex: 1;
+    }
+
+    .details-section {
+      flex: 0 0 300px;
+      border-left: 1px solid #ccc;
+      padding-left: 1rem;
+    }
+
+    #booking-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-bottom: 1rem;
+      max-width: 600px;
+    }
+
+    .form-row {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    #booking-form label {
+      display: flex;
+      flex-direction: column;
+      font-weight: bold;
+      flex: 1;
+      min-width: 200px;
+    }
+
+    #booking-form input,
+    #booking-form select {
+      padding: 0.5rem;
+      font-size: 1rem;
+      box-sizing: border-box;
+      width: 100%;
+    }
+
+    .action-button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      background-color: #333;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      max-width: 200px;
+      margin-top: 1rem;
+    }
+
+    .action-button:hover {
+      background-color: #555;
+    }
   </style>
 </head>
-<body>
 
+<body>
 <header>
   <div>Fleet Calendar</div>
   <div id="user-info">Checking auth...</div>
@@ -39,40 +128,57 @@
 <div class="container">
   <h2>YFNED Fleet Calendar</h2>
 
-  <div>
-    <label for="vehicle-select">Select a Vehicle:</label>
-    <select id="vehicle-select">
-      <option value="01-20 2021 Red Traverse CM335">2021 Red Traverse CM335</option>
-      <option value="02-20 2021 Black Traverse CM366">2021 Black Traverse CM366</option>
-      <option value="03-21 2021 Grey Traverse CN360">2021 Grey Traverse CN360</option>
-      <option value="04-21 2021 Shadow Silverado 1500 CM695">2021 Shadow Silverado 1500 CM695</option>
-      <option value="05-21 2021 Ebony Buick Encore CM532">2021 Ebony Buick Encore CM532</option>
-      <option value="06-21 2020 Grey Grand Caravan CN468">2020 Grey Grand Caravan CN468</option>
-      <option value="07-21 2021 White Terrain CN466">2021 White Terrain CN466</option>
-      <option value="08-21 2021 Black Terrain CN467">2021 Black Terrain CN467</option>
-      <option value="09-24 2024 White Sierra 3500 C182B">2024 White Sierra 3500 C182B</option>
-      <option value="10-24 2025 Green Trailblazer C838B">2025 Green Trailblazer C838B</option>
-      <option value="11-24 2024 Grey Traverse CS266">2024 Grey Traverse CS266</option>
-      <option value="12-24 2012 White Dodge HNL64">2012 White Dodge HNL64</option>
-      <option value="13-24 2024 Grey Traverse CT008">2024 Grey Traverse CT008</option>
-      <option value="14-24 2024 Grey Traverse C443C">2024 Grey Traverse C443C</option>
-      <option value="15-24 2024 Grey Traverse C444C">2024 Grey Traverse C444C</option>
-      <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
-      <option value="17-25 2025 Black Buick Envision CV294">2025 Black Buick Envision CV294</option>
-      <option value="18-25 2024 White Ford F750 CVVVVV">2024 White Ford F750 CVVVVV</option>
-    </select>
-  </div>
-
   <form id="booking-form">
-    <label>Start Date (Mon-Fri): <input type="date" id="booking-start-date" required></label>
-    <label>End Date (optional, Mon-Fri): <input type="date" id="booking-end-date"></label>
-    <label>Start Time: <input type="text" id="booking-start-time" required></label>
-    <label>End Time: <input type="text" id="booking-end-time" required></label>
-    <button id="bookVehicleBtn">Book Vehicle</button>
-  </form>
+    <div class="form-row">
+      <label>
+        Select a Vehicle:
+        <select id="vehicle-select" required>
+          <option value="01-20 2021 Red Traverse CM335">2021 Red Traverse CM335</option>
+          <option value="02-20 2021 Black Traverse CM366">2021 Black Traverse CM366</option>
+          <option value="03-21 2021 Grey Traverse CN360">2021 Grey Traverse CN360</option>
+          <option value="04-21 2021 Shadow Silverado 1500 CM695">2021 Shadow Silverado 1500 CM695</option>
+          <option value="05-21 2021 Ebony Buick Encore CM532">2021 Ebony Buick Encore CM532</option>
+          <option value="06-21 2020 Grey Grand Caravan CN468">2020 Grey Grand Caravan CN468</option>
+          <option value="07-21 2021 White Terrain CN466">2021 White Terrain CN466</option>
+          <option value="08-21 2021 Black Terrain CN467">2021 Black Terrain CN467</option>
+          <option value="09-24 2024 White Sierra 3500 C182B">2024 White Sierra 3500 C182B</option>
+          <option value="10-24 2025 Green Trailblazer C838B">2025 Green Trailblazer C838B</option>
+          <option value="11-24 2024 Grey Traverse CS266">2024 Grey Traverse CS266</option>
+          <option value="12-24 2012 White Dodge HNL64">2012 White Dodge HNL64</option>
+          <option value="13-24 2024 Grey Traverse CT008">2024 Grey Traverse CT008</option>
+          <option value="14-24 2024 Grey Traverse C443C">2024 Grey Traverse C443C</option>
+          <option value="15-24 2024 Grey Traverse C444C">2024 Grey Traverse C444C</option>
+          <option value="16-24 2024 Blue Traverse CT073">2024 Blue Traverse CT073</option>
+          <option value="17-25 2025 Black Buick Envision CV294">2025 Black Buick Envision CV294</option>
+          <option value="18-25 2024 White Ford F750 CVVVVV">2024 White Ford F750 CVVVVV</option>
+        </select>
+      </label>
+    </div>
 
-  <button id="signOutBtn">Sign Out Vehicle Now</button>
-  <button id="returnVehicleBtn">Return Vehicle Now</button>
+    <div class="form-row">
+      <label>
+        Start Date (Mon-Fri):
+        <input type="date" id="booking-start-date" required>
+      </label>
+      <label>
+        End Date (optional, Mon-Fri):
+        <input type="date" id="booking-end-date">
+      </label>
+    </div>
+
+    <div class="form-row">
+      <label>
+        Start Time:
+        <input type="text" id="booking-start-time" required>
+      </label>
+      <label>
+        End Time:
+        <input type="text" id="booking-end-time" required>
+      </label>
+    </div>
+
+    <button id="bookVehicleBtn" class="action-button">Book Vehicle</button>
+  </form>
 
   <div class="calendar-and-details">
     <div class="calendar-section">
@@ -88,6 +194,7 @@
     </div>
   </div>
 </div>
+
 <!-- FullCalendar JS -->
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.9.0/main.min.js"></script>
 
@@ -279,6 +386,7 @@ function toTimestamp(dateStr, timeStr) {
 }
 
 // Handle Multi-day Booking
+// Handle Multi-day Booking (fixed)
 async function handleMultiDayBooking() {
   const selectedVehicle = vehicleSelect.value;
   if (!selectedVehicle) {
@@ -308,8 +416,13 @@ async function handleMultiDayBooking() {
 
   while (currentDate <= endDate) {
     const dayOfWeek = currentDate.getDay();
-    if (dayOfWeek >= 1 && dayOfWeek <= 5) { // Weekdays (Monday = 1, Friday = 5)
-      const dateStr = currentDate.toISOString().split('T')[0];
+    console.log(`Checking date: ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
+
+    if (dayOfWeek >= 1 && dayOfWeek <= 5) { // Monday (1) to Friday (5)
+      const dateStr = currentDate.getFullYear() + '-' +
+                      String(currentDate.getMonth() + 1).padStart(2, '0') + '-' +
+                      String(currentDate.getDate()).padStart(2, '0');
+
       const startTS = toTimestamp(dateStr, startTimeVal);
       const endTS = toTimestamp(dateStr, endTimeVal);
 
@@ -332,7 +445,10 @@ async function handleMultiDayBooking() {
         startTimeISO: new Date(startTS).toISOString(),
         endTimeISO: new Date(endTS).toISOString()
       });
+    } else {
+      console.log(`Skipped date (weekend): ${currentDate.toLocaleDateString()}, dayOfWeek: ${dayOfWeek}`);
     }
+
     currentDate.setDate(currentDate.getDate() + 1);
   }
 
@@ -348,7 +464,7 @@ async function handleMultiDayBooking() {
 
   alert('All bookings created successfully!');
   calendar.refetchEvents();
-}
+} // <--- make sure this closing brace matches the while loop and function scope
 
 
 // handleSignOutVehicle
