--- a/calendar.html
+++ b/calendar.html
@@ -33,6 +33,8 @@
     #booking-form input, #booking-form select { padding: 0.5rem; font-size: 1rem; box-sizing: border-box; width: 100%; }
     .action-button { padding: 0.5rem 1rem; font-size: 1rem; background-color: #333; color: white; border: none; border-radius: 4px; cursor: pointer; max-width: 200px; margin-top: 1rem; }
     .action-button:hover { background-color: #555; }
+    .delete-booking { margin-top: 0.5rem; background: #c00; color: white; border: none; padding: 0.25rem 0.5rem; cursor: pointer; border-radius: 4px; }
+    .delete-booking:hover { background: #a00; }
   </style>
 </head>
 
@@ -117,13 +119,12 @@
 
 <!-- Firebase Scripts -->
 <script type="module">
-  import { initializeApp }    from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
-  import { getAuth, onAuthStateChanged, signOut }
-                             from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
-  import { getDatabase, ref, get, push, set, update }
-                             from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js';
+  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-auth.js';
+  import { getDatabase, ref, get, push, set, update, remove }
+    from 'https://www.gstatic.com/firebasejs/10.12.5/firebase-database.js';
 
-  // your Firebase config...
+  // ─── your Firebase config ───────────────────────────────────────────────
   const firebaseConfig = {
     apiKey: "AIzaSyAjnCWLnUf8msIUjL0TBdZ1eCAiXMLOwvU",
     authDomain: "yfned-fleet-nfc.firebaseapp.com",
@@ -156,12 +157,15 @@
   let lastClickedDayEl        = null;
 
   onAuthStateChanged(auth, user => {
-    if (!user) return window.location.href = 'index.html';
+    if (!user) {
+      window.location.href = 'index.html';
+      return;
+    }
     currentUser = user;
     userInfo.textContent = 'Logged in as: ' + user.email;
     logoutBtn.style.display = 'inline-block';
 
-    // timepicker setup
+    // timepicker
     $('#booking-start-time, #booking-end-time').timepicker({
       timeFormat: 'h:mm p',
       interval: 30,
@@ -220,7 +224,7 @@
     if (!vehicle) return success([]);
     const snap = await get(ref(db, 'bookings/' + vehicle));
     if (!snap.exists()) return success([]);
-    const events = Object.entries(snap.val()).map(([id,b]) => ({
+    const events = Object.entries(snap.val()).map(([id, b]) => ({
       id,
       title: `${b.startTime}-${b.endTime}`,
       start: new Date(b.startTimeISO),
@@ -236,18 +240,41 @@
     return calendar.getEvents().filter(ev => ev.start < endMs && ev.end > startMs);
   }
 
+  // ■■■■ displayBookingsForDay with Delete Buttons ■■■■
   function displayBookingsForDay(events, dateStr) {
     if (!events.length) {
       dateBookingsListEl.textContent = 'No bookings on ' + dateStr + '.';
-    } else {
-      dateBookingsListEl.innerHTML = events.map(ev => `
-        <div>
+      return;
+    }
+
+    dateBookingsListEl.innerHTML = events.map(ev => {
+      let html = `
+        <div class="booking-entry" data-id="${ev.id}">
           <strong>${ev.extendedProps.creatorEmail}</strong><br>
           Start: ${ev.start.toLocaleString()}<br>
           End: ${ev.end.toLocaleString()}
-        </div>
-      `).join('');
-    }
+      `;
+
+      // only show Remove if it's yours
+      if (ev.extendedProps.creatorEmail === currentUser.email) {
+        html += `<br><button class="delete-booking" data-id="${ev.id}">Remove</button>`;
+      }
+      html += `</div>`;
+      return html;
+    }).join('');
+
+    // attach click handlers
+    dateBookingsListEl.querySelectorAll('.delete-booking').forEach(btn => {
+      btn.addEventListener('click', async e => {
+        const id = e.target.dataset.id;
+        if (!confirm('Are you sure you want to remove this booking?')) return;
+        await remove(ref(db, 'bookings/' + vehicleSelect.value + '/' + id));
+        calendar.refetchEvents();
+        // re-render sidebar for the same date
+        const ds = selectedDateTextEl.textContent;
+        displayBookingsForDay(getEventsForDate(new Date(ds)), ds);
+      });
+    });
   }
 
   async function isBookingOverlapping(vehicle, newStart, newEnd) {
@@ -269,7 +296,7 @@
     return new Date(year, month-1, day, h, m).getTime();
   }
 
-  // ─── MULTI-DAY BOOKING: MANUAL DATE PARSE (no timezone shifts) ───
+  // ■■■■ multi-day booking (manual parse) ■■■■
   async function handleMultiDayBooking() {
     const vehicle = vehicleSelect.value;
     if (!vehicle) { alert('No vehicle selected.'); return; }
@@ -277,15 +304,14 @@
     const startVal = bookingStartDateInput.value;
     const endVal   = bookingEndDateInput.value || startVal;
     if (!startVal || !bookingStartTimeInput.value || !bookingEndTimeInput.value) {
-      alert('Please provide dates and times.'); 
+      alert('Please provide dates and times.');
       return;
     }
 
-    // parse YYYY-MM-DD into local-midnight Date
     const [y1,m1,d1] = startVal.split('-').map(Number);
     const [y2,m2,d2] = endVal.split('-').map(Number);
-    const startDate = new Date(y1, m1-1, d1);
-    const endDate   = new Date(y2, m2-1, d2);
+    const startDate  = new Date(y1, m1-1, d1);
+    const endDate    = new Date(y2, m2-1, d2);
 
     if (startDate > endDate) {
       alert('Start date cannot be after end date.');
@@ -293,7 +319,7 @@
     }
 
     const toCreate = [];
-    let current = new Date(startDate);
+    let current    = new Date(startDate);
 
     while (current <= endDate) {
       const dow = current.getDay(); // 1=Mon…5=Fri
