--- a/fleetmaster.html
+++ b/fleetmaster.html
@@ -79,14 +79,22 @@
 </head>
 <body>
 
-<header>
+  <header>
   <div>YFNED Fleetmaster Controls</div>
   <div>
-    <button id="master-btn" class="nav-btn" onclick="location.href='mastercalendar.html'">Master Calendar</button>
+    <button id="master-btn" class="nav-btn"
+            onclick="location.href='mastercalendar.html'">
+      Master Calendar
+    </button>
+    <button id="avail-btn" class="nav-btn"
+            onclick="location.href='availability.html'">
+      Availability Calendar
+    </button>
     <button id="export-btn" class="nav-btn">Export Logs to Excel</button>
     <button id="logout-btn" class="nav-btn">Logout</button>
   </div>
 </header>
+
 
 <div class="container">
   <h2>Vehicle Key Handoff Status</h2>
