--- a/mastercalendar.html
+++ b/mastercalendar.html
@@ -117,12 +117,21 @@
 <body>
 
   <header>
-    <div>YFNED Master Calendar</div>
-    <div>
-      <button class="header-btn" onclick="location.href='fleetmaster.html'">Fleetmaster View</button>
-      <button id="logout-btn" class="header-btn">Logout</button>
-    </div>
-  </header>
+  <div>YFNED Master Calendar</div>
+  <div>
+    <button class="header-btn"
+            onclick="location.href='fleetmaster.html'">
+      Fleetmaster View
+    </button>
+    <button class="header-btn"
+            onclick="location.href='availability.html'">
+      Availability Calendar
+    </button>
+
+    <button id="logout-btn" class="header-btn">Logout</button>
+  </div>
+</header>
+
 
   <div id="container">
     <div id="legend"></div>
